--- a/requirements.txt
+++ b/requirements.txt
@@ -4,27 +4,28 @@ charset-normalizer==3.4.0
 click==8.1.7
 filelock==3.13.1
 Flask==3.0.3
+Flask-Cors==5.0.0
 fsspec==2024.2.0
 gunicorn==23.0.0
 huggingface-hub==0.26.2
 idna==3.10
 itsdangerous==2.2.0
-Jinja2==3.1.4
-MarkupSafe==3.0.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
 mpmath==1.3.0
 networkx==3.2.1
 numpy==2.1.3
 packaging==24.1
 PyYAML==6.0.2
-regex==2024.9.11
+regex==2024.11.6
 requests==2.32.3
 safetensors==0.4.5
 sympy==1.13.1
-tokenizers==0.20.2
-torch==2.5.1
-tqdm==4.66.6
-transformers==4.46.1
+tokenizers==0.20.3
+-f https://download.pytorch.org/whl/torch_stable.html
+torch==2.3.1+cpu
+tqdm==4.67.0
+transformers==4.46.2
 typing_extensions==4.9.0
 urllib3==2.2.3
 Werkzeug==3.1.2
-
